2003-07-25  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c

	Use the flow-holder code to create and lay out the children of an XML node

	* cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, Makefile.am 

	New files: editor areas to handle the layout of the children of an XML node
	
	* cong-editor-area-unknown-tag.c

	Fixed a typo
		
	* cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area-unknown-tag.c, cong-editor-node-element-span.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.c, cong-editor-node.h, plugin-lists-area-listitem.c

	Added ability for text to contain Pango markup; added an idea of flow type to editor nodes
	
	* cong-text-cache.c

	Added a debug option
	
	* cong-util.c

	Use the default catalog rather than load our own, to avoid path issues

2003-07-24  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-lists-area-listitem.c

	Visual improvements
	
	* cong-fake-plugin-hooks.h, main.c

	Added the paragraph plugin; fixed a memory leak in the VFS buffer loader

	* cong-dispspec.c

	Fixed a memory leak

	* plugin-paragraph-area-paragraph.c, plugin-paragraph-area-paragraph.h, plugin-paragraph-node-element-paragraph.c, plugin-paragraph-node-element-paragraph.h, plugin-paragraph.c, Makefile.am

	New files: plugin paragraph renderer
	
2003-07-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.h, cong-editor-widget3.c, cong-plugin.c, cong-plugin.h, plugin-lists.c

	Added plugin editor nodes to the new editor widget; hooked up the <listitem> plugin.
	
	* cong-debug-log-view.c, cong-dispspec.c, cong-dom-view.c, cong-menus.c, cong-parser-error.c, global.h, main.c, plugin-docbook.c, plugin-dtd.c, plugin-validate.c, xmldata.c

	Finished the refactoring of cong_util code
